# Kong-basics

01_kong_dbless/: compose.yaml
01_kong_dbless/config/: kong.yaml
01_kong_dbless/kong-dbless-service/: Dockerfile  pyproject.toml
01_kong_dbless/kong-dbless-service/kong_dbless_service/: main.py
02_kong_with_db/: compose.yaml
02_kong_with_db/service_01_products/: Dockerfile  pyproject.toml
02_kong_with_db/service_01_products/products/: main.py
02_kong_with_db/service_02_orders/: Dockerfile  pyproject.toml
02_kong_with_db/service_02_orders/orders/: main.py
03_kong_jwt/: compose.yml
03_kong_jwt/read_data_service/: Dockerfile  pyproject.toml
03_kong_jwt/read_data_service/read_data_service/: main.py
03_kong_jwt/user_data_service/: Dockerfile  pyproject.toml
03_kong_jwt/user_data_service/user_data_service/: main.py
